# ur5lego

./: .gitignore  CMakeLists.txt  LICENSE  Report.md  main.cc  package.xml  readme.md  setup.py  test_publisher.cpp
action/: Gripper.action  Move.action
blocks_description/: X1-Y1-Z2.urdf.xacro  X1-Y2-Z1.urdf.xacro  X1-Y2-Z2-CHAMFER.urdf.xacro  X1-Y2-Z2-TWINFILLE.urdf.xacro  X1-Y2-Z2-TWINFILLET.urdf.xacro  X1-Y2-Z2.urdf.xacro  X1-Y3-Z2-FILLET.urdf.xacro  X1-Y3-Z2.urdf.xacro  X1-Y4-Z1.urdf.xacro  X1-Y4-Z2.urdf.xacro  X2-Y2-Z2-FILLET.urdf.xacro  X2-Y2-Z2.urdf.xacro  X2-Y2_Z2.urdf.xacro  cubo.urdf.xacro
blocks_description/meshes/: X1-Y1-Z2.dae  X1-Y1_Z2.dae  X1-Y2-Z1.dae  X1-Y2-Z2-CHAMFER.dae  X1-Y2-Z2-TWINFILLET.dae  X1-Y2-Z2.dae  X1-Y2_Z1.dae  X1-Y2_Z2-CHAMFER.dae  X1-Y2_Z2-TWINFILLE.dae  X1-Y2_Z2.dae  X1-Y3-Z2-FILLET.dae  X1-Y3-Z2.dae  X1-Y3_Z2-FILLET.dae  X1-Y3_Z2-TWINFILLE.dae  X1-Y4-Z1.dae  X1-Y4-Z2.dae  X1-Y4_Z1.dae  X1-Y4_Z2.dae  X2-Y2-Z2-FILLET.dae  X2-Y2-Z2.dae  X2-Y2_Z2.dae  cubo.dae
data/: config.rviz  data.yaml  ik_cache.txt  ik_cache_extra.txt
launch/: all.launch  block.launch  garbage.launch  gripper_server.launch  image_converter.launch  image_handler.launch  inverse_kin.launch  inverse_kinematics.launch  move_all.launch  move_client.launch  move_publisher.launch  move_server.launch  move_subscriber.launch  rviz.launch  send_homing_position.launch  spawn_block.launch  spawn_robot.launch  start_gazebo.launch  test.launch  test_ik.launch  test_launch.launch  ur5lego.launch
msg/: ConnectLinks.msg  Pose.msg
robot_description/: ur5.urdf  ur5.urdf.xacro
robot_description/config/: controllers_config.yaml  visual_parameters.yaml
robot_description/gripper/: finger.xacro  gripper.macro.xacro
robot_description/inc/: ur_macro.xacro
scripts/: camera_position_wrapper.bash  connect_link.bash  gripper_wrapper.bash  move_wrapper.bash  reset_robot.bash  send_homing_angles.bash  send_joint_angles.bash  send_joint_positions.bash  test_link.bash  vision_service.py
src/: controller_move_publisher.cpp  controller_move_subscriber.cpp  dest.txt  dest1.txt  dest2.txt  image_converter.py  inverse_kin.cpp  inverse_kinematics.cpp  link_controller_plugin.cpp  math_tools.cpp  moveManager.cpp  move_client.cpp  move_client_unused.cpp  move_manager.cpp  move_server.cpp  move_server_wrapper.cpp  send_homing_position.cpp  send_joint_states.bash  test_subscriber.cpp  trajectory_planner.cpp  vision_service.py
src/controller/: move_controller.cpp  move_manager.cpp
src/include/: Lego.h  cache_handler.h  cartesian_trajectory_planner.h  inverse_kinematics.h  joint_trajectory_planner.h  math_tools.h  move_manager.h  trajectory.h  trajectory_planner.h
src/movement/: cache_handler.cpp  cartesian_trajectory_planner.cpp  gripper_server.cpp  inverse_kinematics.cpp  joint_trajectory_planner.cpp  math_tools.cpp  move_client_example.cpp  move_server.cpp  move_server_wrapper.cpp  position_publisher.cpp  send_homing_position.cpp  trajectory_planner.cpp
src/vision/: change_angles.py  detect.py  frame.py  image_cropper.py  image_saver.py  prova2.py  ss.py  vision.py  vision_service.py
src/vision/models/: common.py
src/vision/script/: icp.py  pointcloud.py
srv/: BlockPosition.srv
worlds/: tavolo.world
