<?xml version="1.0"?>
<package format="2">
  <name>ur5lego</name>
  <version>0.0.0</version>
  <description>The ur5lego package</description>

  <maintainer email="francesco.piazzi-1@studenti.unitn.it">Francesco Piazzi</maintainer>
  <maintainer email="angela.hu@studenti.unitn.it">Angela Hu</maintainer>
  <maintainer email="giovanni.zanibellato@studenti.unitn.it">Giovanni Zanibellato</maintainer>

  <license>GPLv3</license>

  <author email="francesco.piazzi-1@studenti.unitn.it">Francesco Piazzi</author>
  <author email="angela.hu@studenti.unitn.it">Angela Hu</author>
  <author email="giovanni.zanibellato@studenti.unitn.it">Giovanni Zanibellato</author>

  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>pinocchio</depend>
  <depend>actionlib_msgs</depend>
  <depend>gazebo_ros</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
